fixed animation from light to dark mode

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ footer{
 
 @keyframes slide-back {
   from {
-    right: 50%;
+    left: 50%;
   }
   to {
     left: 0;
